--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{ "pano": "pano1.jpg" }
+{"panorama":"https://png.pngtree.com/thumb_back/fh260/background/20240801/pngtree-beautiful-nature-ocean-clouds-seascape-panorama-beautiful-tropical-sea-view-image_15938494.jpg"}
